# autotests_project_for_testrail

./: README.md
with_poetry/: config.env.example  pyproject.toml  requirements.txt
with_poetry/Schema/: testrail.py
with_poetry/scheme/: testrail.py
with_poetry/testrail_tests/model/: application_manager.py  applicationmanager.py
with_poetry/testrail_tests/model/components/: authorization.py  dialog_confirm.py  new_project.py  settings.py
with_poetry/tests/: conftest.py  test_api.py  test_ui.py
with_poetry/tests/api/: test_project.py
with_poetry/tests/ui/: test_login.py  test_project.py
with_poetry/utils/: base_session.py
